--- a/PhoneRepair1/package.json
+++ b/PhoneRepair1/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
     "react-typed": "^1.2.0",
     "slick-carousel": "^1.8.1",
